hasqd/tests/coptest/system/pos/017.sts
#!/bin/sh
$1/zdb erasedisk "create _smd smd SHA256MD5 1 [abc] 1 0" load "addpwd _smd 0:1 rdn pass"
$1/hasqd -c s=017.inp dprn=1 dsvt=1
$1/zdb erasedisk

