hasqd/tests/coptest/system/neg/004.sts
#!/bin/sh
$1/hasqd -lnc s=004.inp dsvt=1 dprn=1
# $1/hasqd -c s=003.inp dwkr=1

